--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,7 @@ body {
 
 a {
   text-decoration: none;
+  color: #4285f4;
 }
 
 .subhead {
@@ -31,7 +32,7 @@ a {
 }
 
 .typeform-share.link {
-  background-color: #4285f4;;
+  background-color: #4285f4;
   border-radius: 2px;
   padding: .9em 1em;
   margin-top: 15px;
@@ -43,6 +44,16 @@ a {
 .typeform-share.link:hover {
   text-decoration: none;
   box-shadow: 0 6px 10px rgba(0,0,0,.23),0 10px 30px rgba(0,0,0,.19);
+}
+
+footer {
+  bottom: 0;
+  position: fixed;
+  right: 0;
+  left: 0;
+  z-index: 1030;
+  margin-bottom: 10px;
+  margin-left: 10px;
 }
 
 @media (min-width: 1280px) and (-webkit-min-device-pixel-ratio: 2), (min--moz-device-pixel-ratio: 2), (-o-min-device-pixel-ratio: 2/1), (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) { 
