tweak short description to read a bit more cleanly

--- a/themes/something-interesting/layout/page.ejs
+++ b/themes/something-interesting/layout/page.ejs
@@ -10,7 +10,7 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://brslack.com" />
 		<meta property="og:description" content="<%= config.description %>" />
-		<meta name="description" content="The Baton Rouge Slack is a community for BR area developers, designers, marketers, business people & misc. other professionals involved in technology.">
+		<meta name="description" content="The Baton Rouge Slack is a community for BR area developers, designers, marketers, business people, and other professionals involved in technology.">
 		
 		<meta name="theme-color" content="#006EBF">
 		<% if (page.path === 'index.html') { %>
