--- a/themes/something-interesting/layout/page.ejs
+++ b/themes/something-interesting/layout/page.ejs
@@ -15,26 +15,26 @@
 		<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 		<% } %>
 		
-<script type='application/ld+json'> 
-{
-  "@context": "http://www.schema.org",
-  "@type": "EducationalOrganization",
-  "name": "Baton Rouge Slack",
-  "url": "https://brslack.com",
-  "description": "The Baton Rouge Slack is a community for Baton Rouge area developers, designers, marketers, business people, hobbyists, students, entrepreneurs, and other professionals involved in technology.",
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "Baton Rouge",
-    "addressRegion": "LA",
-    "addressCountry": "United States"
-  },
-  "geo": {
-    "@type": "GeoCoordinates",
-    "latitude": "30.4582829",
-    "longitude": "-91.1403196"
-  }
-}
- </script>
+		<script type='application/ld+json'> 
+		{
+			"@context": "http://www.schema.org",
+			"@type": "EducationalOrganization",
+			"name": "Baton Rouge Slack",
+			"url": "https://brslack.com",
+			"description": "<%= config.description %>",
+			"address": {
+				"@type": "PostalAddress",
+				"addressLocality": "Baton Rouge",
+				"addressRegion": "LA",
+				"addressCountry": "United States"
+			},
+			"geo": {
+				"@type": "GeoCoordinates",
+				"latitude": "30.4582829",
+				"longitude": "-91.1403196"
+			}
+		}
+		</script>
 	</head>
 
 	<body>
