--- a/sass/index.scss
+++ b/sass/index.scss
@@ -1,20 +1,24 @@
 $brand-gray: #333333;
-$brand-blue: #006EBF;
+$brand-blue: #006ebf;
 $brand-orange: #ff9600;
 
-$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-$font-family-monospace: Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+$font-family-sans-serif: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+  "Helvetica Neue", Arial, sans-serif;
+$font-family-monospace: Menlo, Monaco, Consolas, "Liberation Mono",
+  "Courier New", monospace;
 
 @mixin breakpoint($point) {
   @if $point == medium {
-    @media only screen and (min-width: 64em) { @content; }
+    @media only screen and (min-width: 64em) {
+      @content;
+    }
   }
 }
 
 body {
-	margin: 0;
-	font-family: $font-family-sans-serif;
-	line-height: 1.5rem;
+  margin: 0;
+  font-family: $font-family-sans-serif;
+  line-height: 1.5rem;
   display: flex;
   min-height: 100vh;
   flex-direction: column;
@@ -23,14 +27,14 @@ body {
 .container {
   margin-right: auto;
   margin-left: auto;
-	padding: 1em;
+  padding: 1em;
   flex: 1;
   max-width: 100%;
   box-sizing: border-box;
 
   @include breakpoint("medium") {
     width: 65rem;
-		padding: 0;
+    padding: 0;
   }
 }
 
@@ -66,9 +70,9 @@ body {
 }
 
 @include breakpoint("medium") {
-	.readable-container {
-		width: 40rem;
-	}
+  .readable-container {
+    width: 40rem;
+  }
 }
 
 a {
@@ -84,15 +88,15 @@ a {
 }
 
 .footer-container {
-	background-color: $brand-gray;
-	color: rgba(255, 255, 255, .75);
-	padding: 1.5em;
-	font-size: 12px;
-	text-align: center;
-	margin-top: 4em;
+  background-color: $brand-gray;
+  color: rgba(255, 255, 255, 0.75);
+  padding: 1.5em;
+  font-size: 12px;
+  text-align: center;
+  margin-top: 4em;
 
   a {
-  	color: white;
+    color: white;
 
     &:visited {
       color: white;
@@ -115,12 +119,12 @@ input[type="email"],
 textarea {
   -webkit-appearance: none;
   border-radius: 3px;
-  background-color: #FFFFFF;
+  background-color: #ffffff;
   font-family: inherit;
   border-style: solid;
   border-width: 1px;
   border-color: #cccccc;
-  box-shadow: 1px 1px 4px #EBEBEB;
+  box-shadow: 1px 1px 4px #ebebeb;
   color: rgba(0, 0, 0, 0.75);
   display: block;
   font-size: 0.875rem;
@@ -151,18 +155,22 @@ textarea {
   -webkit-user-drag: none;
   user-select: none;
   box-sizing: border-box;
-	font-family: inherit;
+  font-family: inherit;
   font-size: 130%;
   padding: 0.5em 1em;
   border: none rgba(0, 0, 0, 0);
   text-decoration: none;
   border-radius: 2px;
-	background-color: $brand-blue;
+  background-color: $brand-blue;
   color: #fff;
 
   &:hover,
   &:focus {
-    background-image: linear-gradient(transparent, rgba(0,0,0, 0.05) 40%, rgba(0,0,0, 0.10));
+    background-image: linear-gradient(
+      transparent,
+      rgba(0, 0, 0, 0.05) 40%,
+      rgba(0, 0, 0, 0.1)
+    );
   }
 
   &:focus {
@@ -170,7 +178,8 @@ textarea {
   }
 
   &:active {
-    box-shadow: 0 0 0 1px rgba(0,0,0, 0.15) inset, 0 0 6px rgba(0,0,0, 0.20) inset;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.15) inset,
+      0 0 6px rgba(0, 0, 0, 0.2) inset;
   }
 
   &::-moz-focus-inner {
@@ -180,7 +189,7 @@ textarea {
 }
 
 nav {
-	background-color: $brand-gray;
+  background-color: $brand-gray;
   font-size: 1.25em;
 
   @include breakpoint("medium") {
@@ -189,8 +198,8 @@ nav {
   }
 
   a {
-  	color: white;
-  	text-decoration: none;
+    color: white;
+    text-decoration: none;
 
     &:hover {
       text-decoration: underline;
@@ -207,10 +216,10 @@ nav {
   }
 
   ul {
-  	list-style: none;
-  	padding: 0.5em;
-  	text-align: center;
-  	margin: 0;
+    list-style: none;
+    padding: 0.5em;
+    text-align: center;
+    margin: 0;
 
     @include breakpoint("medium") {
       text-align: left;
@@ -221,7 +230,7 @@ nav {
 
       @include breakpoint("medium") {
         display: inline;
-    		margin-right: 1em;
+        margin-right: 1em;
         margin-bottom: 0;
       }
     }
@@ -238,46 +247,4 @@ nav {
   border: 1px solid darken(white, 15%);
   padding: 0.25rem 0.5rem 0.25rem;
   border-radius: 5px;
-}
-
-.snackbar {
-  color: white;
-  background: $brand-gray;
-  text-align: center;
-  border-radius: 3px;
-  padding: 15px 25px;
-  margin-left: 10px;
-  margin-bottom: 10px;
-  will-change: transform;
-  transition: transform 0.25s 0ms cubic-bezier(0, 0, 0.2, 1);
-  
-  position: fixed;
-  bottom: 0;
-  
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  min-width: 288px;
-
-  font-size: 14px;
-
-  &.hidden {
-    transform: translateY(200%);
-  }
-
-  &-actions {
-    margin-left: 100px;
-
-    button {
-      background: transparent;
-      border: none;
-      text-transform: uppercase;
-      color: $brand-orange;
-      font-size: inherit;
-
-      &:hover {
-        cursor: pointer;
-      }
-    }
-  }
 }
